syntax = "proto3";

package hipstershop.v1;
option go_package = "protobuf;v1";

// ---------------Recommendation service----------


service RecommendationService {
  rpc ListRecommendations(ListRecommendationsRequest) returns (ListRecommendationsResponse){}
}


message ListRecommendationsRequest {
  string user_id = 1;
  repeated  string product_ids = 2;
}

message ListRecommendationsResponse {
  repeated  string product_ids = 1;
}